# blindaid

./: .gitignore  INSTALL.md  INSTALL_AND_RUN.txt  Makefile  RASPBERRY_PI.md  README.md  STRUCTURE.md  config-pi.py  config.py  facerecognizer.py  pyproject.toml  requirements-pi.txt  requirements.txt  setup.ps1  setup.sh  tasks.md
blindaid/: __init__.py  __main__.py  app.py  controller.py
blindaid/core/: audio.py  base_mode.py  caption.py  config.py  depth.py  speech_recognition.py
blindaid/modes/: __init__.py
blindaid/modes/face_recognition/: __init__.py  recognizer.py
blindaid/modes/guardian/: __init__.py  guardian_mode.py
blindaid/modes/object_detection/: __init__.py  detector.py
blindaid/modes/ocr/: __init__.py  reader.py  reading_mode.py
blindaid/modes/people/: __init__.py  people_mode.py
blindaid/modes/scene/: __init__.py  scene_mode.py
docs/: INSTALL.md  RASPBERRY_PI.md  STRUCTURE.md
resources/known_faces/: .gitkeep
tests/: test_cli.py  test_config_paths.py
