[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blindaid"
version = "0.4.0"
description = "Multi-modal assistive technology stack that fuses object detection, OCR, face recognition, captions, and depth cues into a single controller."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "BlindAid Contributors" }
]
license = { text = "Proprietary" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0; platform_machine != 'aarch64'",
    "opencv-python-headless>=4.8.0; platform_machine == 'aarch64'",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "face-recognition>=1.3.0",
    "dlib>=19.22.0",
    "pyttsx3>=2.90",
    "gTTS>=2.3.0",
    "pygame>=2.5.0",
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.13",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
advanced = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0"
]
dev = [
    "black>=24.3.0",
    "ruff>=0.5.0",
    "pytest>=7.4.0",
    "mypy>=1.7.0",
    "types-Pillow>=10.0.0.0",
    "types-requests>=2.31.0.10"
]
full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0"
]

[project.scripts]
blindaid = "blindaid.app:main"

[project.urls]
Homepage = "https://github.com/Rewant-1/blindaid"
Issues = "https://github.com/Rewant-1/blindaid/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["blindaid*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "W", "C90"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
